# platesmith

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
packaging/: build-rpm.sh  make-logo.py  platesmith.service  platesmith.spec
platesmith/: bambu.py  geometry.py  mesh.py  server.py  thumbs.py
platesmith/static/: app.js  index.html  style.css  viewer3d.js
platesmith/templates/: project_settings.json
tests/: test_pipeline.py
