[project]
name = "platesmith"
version = "1.0.0"
description = "Forge SVGs into multi-color Bambu Lab 3MF plates"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "svgelements>=1.9",
    "shapely>=2.1",
    "pillow>=10",
]

[project.scripts]
platesmith = "platesmith.server:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "lib3mf>=2.5.0",
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["platesmith"]
